--- a/html/instructions.html
+++ b/html/instructions.html
@@ -18,14 +18,14 @@
     <header>
         <div class="container-h">
             <div class="logo">
-                <a href="/index.html"><img src="../img/logo.PNG" alt="" class="logo" />GameTime</a>
+                <a href="index.html"><img src="../img/logo.PNG" alt="" class="logo" />GameTime</a>
             </div>
 
         </div>
 
         <nav>
             <ul>
-                <li><a href="/index.html">Home</a></li>
+                <li><a href="index.html">Home</a></li>
                 <li><a href="instructions.html">Instrucciones </a> </li>
                 <li><a href="posteoDeFrasesCelebres.html">Simulador Frases de jugadores </a> </li>
 
