--- a/html/posteoDeFrasesCelebres.html
+++ b/html/posteoDeFrasesCelebres.html
@@ -8,7 +8,7 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
         <link rel="stylesheet" type="text/css" href="https://cdn.jsdelivr.net/npm/toastify-js/src/toastify.min.css">
-    <link rel="stylesheet" href="/css/style.css">
+    <link rel="stylesheet" href="../css/style.css">
     <script defer src="../fetch.js"></script>
 
 
@@ -19,7 +19,7 @@
     <header>
         <div class="container-h">
             <div class="logo">
-                <a href="../index.html"><img src="/img/logo.PNG" alt=""
+                <a href="index.html"><img src="../img/logo.PNG" alt=""
                         class="logo" />GameTime</a>
             </div>
     
