--- a/html/instructions.html
+++ b/html/instructions.html
@@ -25,7 +25,7 @@
 
         <nav>
             <ul>
-                <li><a href="index.html">Home</a></li>
+                <li><a href="../index.html">Home</a></li>
                 <li><a href="instructions.html">Instrucciones </a> </li>
                 <li><a href="posteoDeFrasesCelebres.html">Simulador Frases de jugadores </a> </li>
 
