--- a/html/instructions.html
+++ b/html/instructions.html
@@ -27,7 +27,7 @@
             <ul>
                 <li><a href="../index.html">Home</a></li>
                 <li><a href="instructions.html">Instrucciones </a> </li>
-                <li><a href="posteoDeFrasesCelebres.html"> jugadores </a> </li>
+                <li><a href="posteoDeFrasesCelebres.html"> Simulador Frases de jugadores </a> </li>
 
             </ul>
         </nav>
