--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
     <header>
         <div class="container-h">
             <div class="logo">
-                <a href="index.html"><img src="../img/logo.PNG" alt="" class="logo" />GameTime</a>
+                <a href="index.html"><img src="img/logo.PNG" alt="" class="logo" />GameTime</a>
             </div>
         </div>
 
