--- a/html/posteoDeFrasesCelebres.html
+++ b/html/posteoDeFrasesCelebres.html
@@ -20,7 +20,7 @@
     <header>
         <div class="container-h">
             <div class="logo">
-                <a href="index.html"><img src="../img/logo.PNG" alt=""
+                <a href="../index.html"><img src="../img/logo.PNG" alt=""
                         class="logo" />GameTime</a>
             </div>
     
